--- a/HW3/templates/codes.html
+++ b/HW3/templates/codes.html
@@ -12,5 +12,6 @@
 <li type="circle"><b>{{ item["code"] }} </b> {{" >>> " + item["name"] }}</li>
 {% endfor %}
 
+<a href="/">On main page</a>
 </body>
 </html>
