get_genres() function was reworked

--- a/HW5/templates/genres.html
+++ b/HW5/templates/genres.html
@@ -15,7 +15,7 @@
     {% for item in data %}
         <tr class="customers">
             {% for value in item %}
-              <td class="customers_item"> {{ value }} minutes</td>
+              <td class="customers_item"> {{ value }} seconds</td>
             {% endfor %}
         </tr>
     {% endfor %}
