Reworked front-end content

--- a/HW5/templates/genres.html
+++ b/HW5/templates/genres.html
@@ -4,8 +4,7 @@
 
 <h1>Genres analytics</h1>
 
-<table class="styled-table">
-    
+<table class="genres-table">
     <tr class="menu">
         {% for column_name in fields %}
             <td class="customers_item"><b>{{ column_name }}</b></td>
