--- a/HW5/templates/customers.html
+++ b/HW5/templates/customers.html
@@ -6,6 +6,10 @@
     <h1>Customers for '{{text}}' request key</h1>
 {% else %}
     <h1>Customers</h1>
+    <form action="/customers" method="get" class="search-form">
+        <input class="search-field" type="text" name="text" value="" placeholder="Enter text" required/>
+        <input class="search-button" type="submit" value="Search">
+    </form>
     <h3 class="comment">You can set search parameter in url string with 'text=' key.<br>
         <i>Ex.: http...?text=Odesa</i></h3>
 {% endif %}
@@ -23,7 +27,7 @@
     {% for item in data %}
         <tr class="customers">
             {% for value in item %}
-                {% if data %}
+                {% if value  %}
                     <td class="customers_item">{{ value }}</td>
                 {% else %}
                     <td class="customers_item">-</td>
