--- a/DJsite/users/templates/index.html
+++ b/DJsite/users/templates/index.html
@@ -1,9 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Possible urls on this site:</h1>
-<ul>
-	{% for post in posts %}
-		<li><a href="{% url post.url_name %}">{{ post.name }}</a> === {{ post.description }}</li>
-	{% endfor %}
-</ul>
+
+<section>
+  <div>
+    <h2>Possible urls on this site</h2>
+    <ul class="check-list">
+		{% for post in posts %}
+			<li><a class="myButton" href="{% url post.url_name %}">{{ post.name }}</a> ---> {{ post.description }}</li>
+		{% endfor %}
+    </ul>
+  </div>
+</section>
 {% endblock content %}
