--- a/DJsite/users/static/users/css/styles.css
+++ b/DJsite/users/static/users/css/styles.css
@@ -1,3 +1,40 @@
+/* Boilerplate stuff */
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+html {
+  -webkit-font-smoothing: antialiased;
+  font-family: "Helvetica Neue", sans-serif;
+  font-size: 62.5%;
+  background: #d1d1d1;
+}
+
+body {
+  font-size: 1.6rem; /* 18px */
+  background-image: url('../images/bg1.jpg');
+  background-size: cover;
+}
+
+html,
+body,
+section {
+  height: 100%;
+}
+
+section {
+  margin-left: 15px;
+  align-items: center;
+}
+
+div {
+  margin: auto;
+}
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~Header-Menu-Bar~~~~~~~~~~~~~~~~*/
+
 ul.messages {
 	list-style-type: none;
 }
@@ -34,6 +71,14 @@ ul.menu-bar {
 
 li.menu-bar {
   float: left;
+  font-size: 20px;
+  font-family: Bookman;
+}
+li.last-menu-button {
+	float: right;
+	margin-right: 40px;
+	background: lightskyblue;
+	padding: 0;
 }
 
 li.menu-bar a {
@@ -47,7 +92,9 @@ li.menu-bar a {
 li.menu-bar a:hover:not(.active) {
   background-color: #111;
 }
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Main Menu Buttons for URLs ~~~~~~~~~~~~~~~~*/
 .myButton {
 	box-shadow:inset 0px 1px 0px 0px #ffffff;
 	background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
@@ -67,19 +114,21 @@ li.menu-bar a:hover:not(.active) {
 	text-align: center;
 }
 .myButton:hover {
-	background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
-	background-color:#f6f6f6;
+	color: #04AA6D;
 }
 .myButton:active {
 	position:relative;
 	top:1px;
 }
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Main Menu List ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
 .active {
   background-color: #04AA6D;
 }
 .check-list {
-  margin: 0;
+  margin-left: -40px;
   padding-left: 1.2rem;
 }
 
@@ -89,6 +138,7 @@ li.menu-bar a:hover:not(.active) {
   padding-left: 2.5rem;
   margin-bottom: 0.5rem;
   font-family: Monospace;
+  font-size: 18px;
 }
 
 .check-list li:before {
@@ -106,38 +156,11 @@ li.menu-bar a:hover:not(.active) {
     transform: rotate(45deg);
 }
 
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
-/* Boilerplate stuff */
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-}
-
-html {
-  -webkit-font-smoothing: antialiased;
-  font-family: "Helvetica Neue", sans-serif;
-  font-size: 62.5%;
-  background: #d1d1d1;
-}
-
-body {
-  font-size: 1.6rem; /* 18px */
-  background-color: #efefef;
-  color: #324047
-}
-
-html,
-body,
-section {
-  height: 100%;
-}
-
-section {
-  margin-left: 15px;
-  align-items: center;
-}
-
-div {
-  margin: auto;
+.content {
+	margin-left: 10px;
+	font-family: Candara;
+	color: #2e2e2e;
+;
 }
