--- a/DJsite/users/static/users/css/styles.css
+++ b/DJsite/users/static/users/css/styles.css
@@ -296,7 +296,62 @@ select {
 	width: 7%;
 	margin-bottom: 20px;
 }
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~Search users~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+form.search-form input[type=text] {
+  display: inline;
+  padding: 10px;
+  font-size: 17px;
+  border: 1px solid grey;
+  float: left;
+  width: 200px;
+  background: #f1f1f1;
+}
+
+/* Style the submit button */
+form.search-form button {
+  float: left;
+  width: 40px;
+  height: 42px;
+  padding: 10px;
+  background: #2196F3;
+  color: white;
+  font-size: 17px;
+  border: 1px solid grey;
+  border-left: none; /* Prevent double borders */
+  cursor: pointer;
+}
+
+form.search-form button:hover {
+  background: #0b7dda;
+}
+
+/* Clear floats */
+form.search-form::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+.search-form-multiple {
+	width: 25%;
+}
+button.search-form-multiple {
+	margin: 5px;
+	width: 93%;
+  background: #2196F3;
+  color: white;
+  font-size: 17px;
+  border: 1px solid grey;
+  cursor: pointer;
+
+}
+input.search-form-multiple {
+	margin: 5px;
+	width: 45%;
+	padding: 5px;
+}
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~Errors~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
 .NotFound-error-img {
 	background-image: url('../images/404v2.png');
@@ -305,3 +360,4 @@ select {
 	background-position: center -10px;
 	background-size: 30%;
 }
+
