--- a/DJsite/users/templates/delete_user.html
+++ b/DJsite/users/templates/delete_user.html
@@ -12,5 +12,6 @@
               <td>{{ value }}</td>
             {% endfor %}
           </tr>
+        </table>
     </form>
 {% endblock content %}
