--- a/DJsite/users/templates/404.html
+++ b/DJsite/users/templates/404.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
 {% block content %}
+<h4 style="text-align: center;">Msg: {{ msg }}</h4>
 <div class="NotFound-error-img"></div>
 {% endblock content %}
