--- a/DJsite/users/templates/posts-results-partial.html
+++ b/DJsite/users/templates/posts-results-partial.html
@@ -1,5 +1,11 @@
 {% if posts %}
 	<table class="userlist-table" style="margin-top: 5px;">
+	<tr>
+	    <th>Edit</th>
+	    {% for column in columns %}
+	    	<th>{{ column }}</th>
+	    {% endfor %}
+	    </tr>
 	{% for post in posts %}
 		<tr>
 			<td><a href="{% url 'edit-user' pk=post.pk %}"><button class="edit-user-button">E</button></a></td>
