--- a/DJsite/users/static/users/css/styles.css
+++ b/DJsite/users/static/users/css/styles.css
@@ -308,6 +308,29 @@ table.userlist-table tr:hover {
 	position:relative;
 	top:1px;
 }
+.show-user-button {
+	box-shadow:inset 0px -3px 7px 0px #3dc21b;
+	background:linear-gradient(to bottom, #45c74e 5%, #5cbf2a 100%);
+	background-color:#45c74e;
+	border-radius:3px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	padding:3px 9px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+}
+.show-user-button:hover {
+	background:linear-gradient(to bottom, #5cbf2a 5%, #45c74e 100%);
+	background-color:#5cbf2a;
+}
+.show-user-button:active {
+	position:relative;
+	top:1px;
+}
 .delete-confirm-button {
 	box-shadow:inset 0px 1px 0px 0px #8a2a21;
 	background:linear-gradient(to bottom, #c62d1f 5%, #f24437 100%);
@@ -502,3 +525,14 @@ form.search-form-selector button {
     animation-timing-function:ease-in-out;
     animation-direction: alternate;
   }
+.profile {
+	font-size: 17px;
+}
+.profile-value {
+	display: inline-block;
+	width: 100%;
+	border: 1px solid #CCCCCC;
+	font-size: 18px;
+	font-family: Times New Roman, serif;
+	padding-left: 5px;
+	}
