--- a/DJsite/users/templates/list_of_users.html
+++ b/DJsite/users/templates/list_of_users.html
@@ -7,22 +7,24 @@
 	
 	<tr>
     <th>Edit</th>
+    <th>Show</th>
     {% for column in columns %}
     	<th>{{ column }}</th>
     {% endfor %}
     </tr>
 	
 	{% for post in posts %}
-		<tr>
-			<td><a href="{% url 'edit-user' pk=post.pk %}"><button class="edit-user-button">E</button></a></td>
-			{% for value in post %}
-				{% if value.url %}
-					<td><img src="{{value.url}}" class="user-list-photo"></td>
-				{% else %}
-					<td>{{ value }}</td>
-				{% endif %}
-			{% endfor %}
-		</tr>
+			<tr>
+				<td><a href="{% url 'edit-user' pk=post.pk %}"><button class="edit-user-button">E</button></a></td>
+				<td><a href="{{ post.get_absolute_url }}"><button class="show-user-button">S</button></a></td>
+				{% for value in post %}
+					{% if value.url %}
+						<td><img src="{{value.url}}" class="user-list-photo"></td>
+					{% else %}
+						<td>{{ value }}</td>
+					{% endif %}
+				{% endfor %}
+			</tr>
 	{% endfor %}
 
 </table>
