--- a/DJsite/users/static/users/css/styles.css
+++ b/DJsite/users/static/users/css/styles.css
@@ -210,7 +210,7 @@ table.userlist-table tr:hover {
 .user-list-photo {
 	border-radius: 50%;
 	width: 40px;
-	height: 4	0px;
+	height: 40px;
 }
 
 .fast-search {
@@ -296,7 +296,7 @@ table.userlist-table tr:hover {
 	color:#ffffff;
 	font-family:Arial;
 	font-size:15px;
-	padding:3px 9px;
+	padding:5px 9px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #263666;
 }
@@ -319,7 +319,7 @@ table.userlist-table tr:hover {
 	color:#ffffff;
 	font-family:Arial;
 	font-size:15px;
-	padding:3px 9px;
+	padding:5px 9px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #2f6627;
 }
@@ -525,6 +525,9 @@ form.search-form-selector button {
     animation-timing-function:ease-in-out;
     animation-direction: alternate;
   }
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~Profile~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
 .profile {
 	font-size: 17px;
 }
@@ -536,3 +539,55 @@ form.search-form-selector button {
 	font-family: Times New Roman, serif;
 	padding-left: 5px;
 	}
+.download-resume-button {
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
+	background-color:#f9f9f9;
+	border-radius:6px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#666666;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:3px 15px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffffff;
+	margin-bottom: 5px;
+}
+.download-resume-button:hover {
+	background:linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
+	background-color:#e9e9e9;
+}
+.download-resume-button:active {
+	position:relative;
+	top:1px;
+}
+.profile-invited {
+	box-shadow: 0px 1px 0px 0px #fff6af;
+	background:linear-gradient(to bottom, #ffec64 5%, #ffab23 100%);
+	background-color:#ffec64;
+	border-radius:50%;
+	border:5px solid #ffaa22;
+	display:inline-block;
+	color:#333333;
+	font-family:Arial;
+	font-size:20px;
+	font-weight:bold;
+	padding:4px 14px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffee66;
+	display: inline-block;
+	float: right;
+}
+.profile-invited:hover {
+	background:linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
+	background-color:#ffab23;
+}
+.users-invited {
+	position: relative;
+	left: 115px;
+}
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
