--- a/DJsite/users/templates/list_of_users.html
+++ b/DJsite/users/templates/list_of_users.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
 
 <h1>List of {{ user_class }}</h1>
@@ -19,7 +20,11 @@
 				<td><a href="{{ post.get_absolute_url }}"><button class="show-user-button">S</button></a></td>
 				{% for value in post %}
 					{% if value.url %}
-						<td><img src="{{value.url}}" class="user-list-photo"></td>
+						{% if value.url|slice:":19" == '/media/user_resume/' %}
+							<td><img src="{% static 'users/images/resume.png' %}" class="user-list-photo"></td>
+						{% else %}
+							<td><img src="{{value.url}}" class="user-list-photo"></td>
+						{% endif %}
 					{% else %}
 						<td>{{ value }}</td>
 					{% endif %}
