--- a/DJsite/users/templates/posts-results-partial.html
+++ b/DJsite/users/templates/posts-results-partial.html
@@ -1,16 +1,29 @@
+{% load static %}
 {% if posts %}
 	<table class="userlist-table" style="margin-top: 5px;">
+	
 	<tr>
-	    <th>Edit</th>
-	    {% for column in columns %}
-	    	<th>{{ column }}</th>
-	    {% endfor %}
-	    </tr>
+    	<th>Edit</th>
+    	<th>Show</th>
+    	{% for column in columns %}
+    		<th>{{ column }}</th>
+    	{% endfor %}
+    </tr>
+	
 	{% for post in posts %}
 		<tr>
 			<td><a href="{% url 'edit-user' pk=post.pk %}"><button class="edit-user-button">E</button></a></td>
+			<td><a href="{{ post.get_absolute_url }}"><button class="show-user-button">S</button></a></td>
 			{% for value in post %}
-				<td>{{ value }}</td>
+				{% if value.url %}
+					{% if value.url|slice:":19" == '/media/user_resume/' %}
+						<td><img src="{% static 'users/images/resume.png' %}" class="user-list-photo"></td>
+					{% else %}
+						<td><img src="{{value.url}}" class="user-list-photo"></td>
+					{% endif %}
+				{% else %}
+					<td>{{ value }}</td>
+				{% endif %}
 			{% endfor %}
 		</tr>
 	{% endfor %}
