--- a/DJsite/users/templates/posts-results-partial.html
+++ b/DJsite/users/templates/posts-results-partial.html
@@ -8,6 +8,9 @@
     	{% for column in columns %}
     		<th>{{ column }}</th>
     	{% endfor %}
+    	{% if posts.0.position == 'Teacher' %}
+    		<th>Courses</th>
+    	{% endif %}
     </tr>
 	
 	{% for post in posts %}
@@ -25,6 +28,14 @@
 					<td>{{ value }}</td>
 				{% endif %}
 			{% endfor %}
+
+			{% if posts.0.position == 'Teacher' %}
+				<td>
+					{% for course in post.get_teacher_courses %}
+						{{ course }} 
+					{% endfor %}
+				</td>
+			{% endif %}
 		</tr>
 	{% endfor %}
 	</table>
