Minor changes were made

--- a/DJsite/users/templates/index.html
+++ b/DJsite/users/templates/index.html
@@ -34,7 +34,7 @@
       </select>
     </label>
 
-    <button type="submit"><i class="fa fa-search"></i></button>
+    <button type="submit" title="Search!"><i class="fa fa-search"></i></button>
   </form>
 </div>
 {% endblock content %}
