Some refactoring stuff

--- a/DJsite/users/templates/base.html
+++ b/DJsite/users/templates/base.html
@@ -45,6 +45,7 @@
 
 {% block footer %}
   <script type="text/javascript" src="{% static 'users/js/main.js' %}"></script>
+  <script type="text/javascript" src="{% static 'users/js/scripts.js' %}"></script>
 {% endblock %}
 
 </body>
