--- a/DJsite/users/templates/edit_user.html
+++ b/DJsite/users/templates/edit_user.html
@@ -4,7 +4,7 @@
 
 {% block messages %}
 	{% if messages %}
-		<ul class="messages">
+		<ul class="messages" id='successMessage'>
     	{% for message in messages %}
     		<li {% if message.tags %} class="{{ message.tags }}"{% endif %}> {{ message }} </li>
     	{% endfor %}
