--- a/DJsite/users/templates/get-users-by-course.html
+++ b/DJsite/users/templates/get-users-by-course.html
@@ -4,36 +4,6 @@
 
 <h1>Position: {{position}} <br> Course: {{course.name}}</h1>
 
-{% if user_list %}
-	<table class="userlist-table">	
-		
-		<tr>
-	    <th>Edit</th>
-	    {% for column in columns %}
-	    	<th>{{ column }}</th>
-	    {% endfor %}
-	    <th>Course</th>
-	    </tr>
+{% include 'posts-results-partial.html' %}
 
-		{% for user in user_list %}
-			<tr>
-				<td><a href="{% url 'edit-user' pk=user.pk %}"><button class="edit-user-button">E</button></a></td>
-				{% for value in user %}
-					{% if value.url %}
-						{% if value.url|slice:":19" == '/media/user_resume/' %}
-							<td><img src="{% static 'users/images/resume.png' %}" class="user-list-photo"></td>
-						{% else %}
-							<td><img src="{{value.url}}" class="user-list-photo"></td>
-						{% endif %}
-					{% else %}
-						<td>{{ value }}</td>
-					{% endif %}
-				{% endfor %}
-				<td>{{course.name}}</td>
-			</tr>
-		{% endfor %}
-	</table>
-{% else %}
-	<h2>No users found :(</h2>
-{% endif %}
 {% endblock content %}
