--- a/DJsite/users/static/users/css/styles.css
+++ b/DJsite/users/static/users/css/styles.css
@@ -279,6 +279,21 @@ table.userlist-table tr:hover {
 	font-family: Georgia, serif;
 }
 
+table.userlist-table-all, th, td {
+	text-align: center;
+	padding: 4px;
+	border-bottom: 1px solid #ddd;
+}
+table.userlist-table-all {
+	width: 100%;
+	height: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	border-collapse: collapse;
+}
+table.userlist-table-all tr:hover {
+	background: #a1ffc0;
+}
 /*~~~~~~~~~~~~~~~~~~~ Edit/Delete users form ~~~~~~~~~~~~~~~~~~~~~*/
 .fields-names {
 	display: inline-block;
