--- a/DJsite/users/templates/profile.html
+++ b/DJsite/users/templates/profile.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block content %}
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css">
 
@@ -46,9 +48,11 @@
 		            		<i class="fa fa-download" aria-hidden="true"></dfn></i>
 		            	</button></a></div>
 		            {% endif %}
-
-	            	<!-- <embed src="{{profile.raw_resume}}" height="280px" width="100%"></embed> -->
-	            	<textarea readonly="true" class="resume-spoiler" placeholder="Can't read this file">{{ profile.get_resume_in_template_format }}</textarea>
+		            {% if profile.get_resume_in_template_format %}
+	            		<textarea readonly="true" class="resume-spoiler" placeholder="Can't read this file">{{ profile.get_resume_in_template_format }}</textarea>
+	            	{% else %}
+	            		<img style="width: 85%;height: 50px;margin: 100px 30px 0 30px" src="{% static 'users/images/no_resume.png' %}">
+	            	{% endif %}
 	            </div>
 	        </div>
 	    {% elif profile.position == 'Teacher' %}
