--- a/DJsite/users/templates/profile.html
+++ b/DJsite/users/templates/profile.html
@@ -51,7 +51,7 @@
 		            {% if profile.get_resume_in_template_format %}
 	            		<textarea readonly="true" class="resume-spoiler" placeholder="Can't read this file">{{ profile.get_resume_in_template_format }}</textarea>
 	            	{% else %}
-	            		<img style="width: 85%;height: 50px;margin: 100px 30px 0 30px" src="{% static 'users/images/no_resume.png' %}">
+	            		<img style="width: 100%;height: 35px;margin: 100px auto auto auto" src="{% static 'users/images/no_resume.png' %}">
 	            	{% endif %}
 	            </div>
 	        </div>
