--- a/DJsite/users/static/users/css/styles.css
+++ b/DJsite/users/static/users/css/styles.css
@@ -237,8 +237,8 @@ table.userlist-table tr:hover {
 .fast-search {
 	display: inline;
 	float: right;
-	margin-top: 35px;
-	margin-right: 25px;
+	margin-top: 15px;
+	margin-right: 5px;
 	background-color: lightgray;
 	padding: 10px;
 	height: 200px;
@@ -263,9 +263,9 @@ table.userlist-table tr:hover {
 	margin-bottom: 30px;
 }
 .fast-search button {
-	position: absolute;
-	top: 112px;
-	right: 60px;
+	position: relative;
+	bottom: 145px;
+	left: 285px;
 
 	height: 50px;
 	width: 50px;
@@ -493,13 +493,23 @@ div.login-form {
 div.login-form button { 
 	margin: 20px auto 0 auto;
 }
-input.login-form {
-	
-}
 label.login-form {
 	display: block;
 	margin: 10px 0 5px 0;
 }
+
+div.register-form {
+	width:400px;
+  height:700px;
+	margin: 70px auto;
+  background-color: gray;
+  padding: 20px;
+  text-align: center;
+}
+div.register-form button { 
+	margin: 30px auto 0 auto;
+}
+
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~Search users~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
